--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,9 @@
 [DEFAULT]
 
-[Voice]
+[Listener]
 model = data\deepspeech-0.9.1-models.pbmm
 scorer = data\deepspeech-0.9.1-models.scorer
 aggressiveness = 1
+
+[Speaker]
+voice_id = HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Speech\Voices\Tokens\TTS_MS_EN-GB_HAZEL_11.0
