--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-deepspeech~=0.9.2
+deepspeech~=0.9.3
 halo~=0.0.18
-numpy>=1.17.0
+numpy>=1.19.4
 pyaudio~=0.2.11
 pyttsx3~=2.90
 scipy>=1.1.0
+spacy~=2.3.5
 webrtcvad~=2.0.10
