--- a/config.ini
+++ b/config.ini
@@ -7,3 +7,6 @@ aggressiveness = 1
 
 [Speaker]
 voice_id = HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Speech\Voices\Tokens\TTS_MS_EN-GB_HAZEL_11.0
+
+[Rasa]
+endpoint_base = http://localhost:5005
