--- a/config.ini
+++ b/config.ini
@@ -9,4 +9,9 @@ aggressiveness = 1
 voice_id = HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Speech\Voices\Tokens\TTS_MS_EN-GB_HAZEL_11.0
 
 [Rasa]
-endpoint_base = http://localhost:5005
+model = data\rasa\models
+
+[Server]
+host = 0.0.0.0
+port = 8000
+
