--- a/plugins/puns/config.json
+++ b/plugins/puns/config.json
@@ -2,12 +2,13 @@
     "plugin": "puns",
     "intents": [
         {
-            "intent_id": "greeting",
+            "intent_id": "ask_if_funny",
             "examples": [
-                "Hello",
-                "How are you?",
-                "How's it going?",
-                "What's new?"
+                "Are you funny?",
+                "How funny are you?",
+                "How good are your puns?",
+                "How good are your dad jokes?",
+                "How cheesy are your jokes?"
             ]
         },
         {
@@ -39,12 +40,11 @@
     ],
     "responses": [
         {
-            "response_id": "utter_great",
+            "response_id": "utter_funny_assurance",
             "text": [
-                "how have you been",
-                "long time no see",
-                "great to see you",
-                "nice to have you here!"
+                "I only give you the funniest, cheesiest jokes sourced from the finest joke distilleries.",
+                "Very funny! My puns must come from the humorous region of France, otherwise they're just sparkling dad jokes.",
+                "Very funny! I guarantee you'll be rolling on the floor laughing!"
             ]
         }
     ],
@@ -60,11 +60,10 @@
             ]
         },
         {
-            "description": "greet and joke",
-            "intent": "greeting",
+            "description": "assure the user of the quality of dad jokes",
+            "intent": "ask_if_funny",
             "actions": [
-                "utter_great",
-                "fetch_joke"
+                "utter_funny_assurance"
             ]
         }
     ]
