--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,16 @@
 [DEFAULT]
 
 [Listener]
-model = data\deepspeech-0.9.1-models.pbmm
-scorer = data\deepspeech-0.9.1-models.scorer
+model = data/deepspeech-0.9.1-models.pbmm
+scorer = data/deepspeech-0.9.1-models.scorer
 aggressiveness = 1
 
 [Speaker]
 voice_id = HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Speech\Voices\Tokens\TTS_MS_EN-GB_HAZEL_11.0
 
 [Rasa]
-config = data\rasa\config
-model = data\rasa\models
+config = data/rasa/config
+model = data/rasa/models
 
 [Server]
 host = 0.0.0.0
