Add additional validation.
I've added additional config validation.

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ model = data/deepspeech-0.9.1-models.pbmm
 scorer = data/deepspeech-0.9.1-models.scorer
 aggressiveness = 1
 
-[Speaker]
+[TTS]
 voice_id = HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Speech\Voices\Tokens\TTS_MS_EN-GB_HAZEL_11.0
 
 [Rasa]
