--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,5 +17,5 @@ formats:
 python:
   version: 3.7
   install:
-    - requirements: requirements.txt
+    - requirements: requirements/common.txt
     - requirements: docs/requirements.txt
