Use docker-compose to allow voice query-enabled and -disabled instances to be build using Docker.
The docker-compose utility may now be used to build AskBob either with or without support for voice queries.

--- a/docker/voice/Dockerfile
+++ b/docker/voice/Dockerfile
@@ -3,28 +3,29 @@ FROM python:3.7-slim
 ARG DEBIAN_FRONTEND=noninteractive
 ARG ASKBOB_SETUP_CONFIG=.
 
-RUN apt update && apt install -y build-essential
+RUN apt update && apt install -y build-essential git
 
-WORKDIR /askbob
-
-RUN mkdir data
-
-COPY ./askbob askbob
-COPY ./plugins plugins
-COPY ./data data
-COPY ./*.ini .
-COPY ./*.json .
+WORKDIR /askbob/installation
+COPY ./askbob /askbob/installation/askbob
 COPY ./README.md .
 COPY ./MANIFEST.in .
 COPY ./setup.py .
 
 RUN python -m pip install -U pip setuptools wheel
-
 RUN python -m pip install -e .[voice]
 RUN python -m spacy download en_core_web_md
 
+WORKDIR /askbob/build
+
+RUN mkdir data
+
+COPY ./plugins plugins
+COPY ./config.ini config.ini
+COPY ./*.json ./
+COPY ./data data
+
 RUN python -m askbob --setup $ASKBOB_SETUP_CONFIG
 
-ENTRYPOINT python -m askbob -s
+ENTRYPOINT python -m askbob -s -v
 
 EXPOSE 8000
