Add .coveragerc file.
This is a file used to configure pytest-cov.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 filterwarnings =
     ignore::DeprecationWarning
+
+addopts = --cov-config=.coveragerc --cov=askbob --cov-report html:cov_html
