Add multilingual support.
I've added support for non-English languages to be used, provided the correct models are installed.

--- a/config.ini
+++ b/config.ini
@@ -11,6 +11,8 @@ voice_id = HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Speech\Voices\Tokens\TTS_MS_EN-
 [Rasa]
 config = data/rasa/config
 model = data/rasa/models
+language = en
+spacy_model = en_core_web_md
 
 [Server]
 host = 0.0.0.0
