--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ spacy_model = en_core_web_md
 [Server]
 host = 0.0.0.0
 port = 8000
-cors_origins =
+cors_origins = *
 
 [Plugins]
 location = plugins
