--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
 filterwarnings =
     ignore::DeprecationWarning
+    ignore:.*ufunc.*:RuntimeWarning
 
 addopts = --cov-config=.coveragerc --cov=askbob --cov-report html:cov_html
