Update version to 0.0.4.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,6 @@
 include .gitignore
 include config.ini
 include default_config.json
-include Dockerfile
-include pytest.ini
+include LICENSE
 
 graft requirements
-graft tests
